@@ -1,5 +1,8 @@
 2004-02-14  Martin Blom  <martin@blom.org>
 
+	* ahi.device: I forgot to update dspechofuncs_68k.s when removing
+	the need for gasp. Fixed.
+
 	* ahi.device: Applied a new batch of AmigaOS 4.x pathches from
 	Davy. Thanks!
 
